Fixed footer alignment issues/index text size

--- a/assets/css/immersion.scss
+++ b/assets/css/immersion.scss
@@ -11,7 +11,7 @@ body {
 }
 
 footer {
-  padding-top: 70px;
+  margin-top: 70px;
 }
 
 .navbar-inverse .navbar-brand,
@@ -64,12 +64,17 @@ a:hover,
   margin-bottom: 40px;
 }
 
+.site-footer {
+	background-color: #eee;
+	padding: 1rem 3rem 1rem 3rem;
+}
+
 .project-name {
   font-size: 6em;
   color: $primary-color;
 }
 .lead {
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
 h1, h2, h3, h4, h5, h6 {
